syntax = "proto3";

package cart;

service CartService {
  rpc AddToCart (AddToCartRequest) returns (AddToCartResponse);
  rpc GetCart (GetCartRequest) returns (GetCartResponse);
  rpc DeleteCart (DeleteCartRequest) returns (DeleteCartResponse);
}

message AddToCartRequest {
  string userId = 1;
  string skuId = 2;
  int32 quantity = 3;
  double price = 4;
  ItemDetail itemDetail = 5;
}

message AddToCartResponse {
  CartEntity cart = 1;  
  string message = 2;   
}

message GetCartRequest {
  string userId = 1;
}

message GetCartResponse {
  CartEntity cart = 1;   
}

message CartEntity {
  string id = 1;
  string userId = 2;
  repeated CartItemEntity items = 3;
  string createdAt = 4;
  string updatedAt = 5;
}
message DeleteCartRequest {
  string cartId = 1;
}
message DeleteCartResponse {
  bool success = 1;   
}

message CartItemEntity {
  string id = 1;
  string cartId = 2;
  string skuId = 3;
  int32 quantity = 4;
  double price = 5;
  string image = 6;
  ItemDetail itemDetail = 7;
  string createdAt = 8;
  string updatedAt = 9;
}

message ItemDetail {
  string name = 1;
  string description = 2;
  string brand = 3;
  string category = 4;
  string image = 5;
  map<string, string> attributes = 6;
  map<string, string> variants = 7;
}

